--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
          <div class="col-lg-10">
            <div class="wwa">
              <div class="page-header">
-             <h2>Who We Are:</h2>
+             <h2>Who We Are</h2>
              </div>
 	           <p>Rainbow Design Services is a leading provider of NETWORK ENGINEERING, FIELD SERVICES and GIS/MAPPING SERVICES including documentation,
               audits, surveys and software development. </p>
@@ -117,7 +117,7 @@
            <br>
            <div class="wws">
              <div class="page-header">
-           <h2>Who We Serve:</h2>
+           <h2>Who We Serve</h2>
              </div>
            <li> MSOs / Cable Television </li>
            <li> Utilities (Electric, Water, Gas)</li>
