--- a/index.html
+++ b/index.html
@@ -183,14 +183,19 @@
 <br>
 <br>
 <br>
+
+<nav id="social">
 <ul>
        <div class="follow">
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">LinkeIn</a></li>
+         <h2 class="RDS">Rainbow Design Services</h2>
+        <li><a href="https://www.facebook.com/groups/107214069331630/">Facebook</a></li>
+        <li><a href="https://www.linkedin.com/company/rainbow-design-services-inc.?trk=fc_badge">LinkeIn</a></li>
        </div>
      </ul>
+</nav>
+<br>
+<br>
 <footer>
-     
        <p class="copyRight">&copy; 2015 Rainbow Design Service, Inc. All rights reserved.</p>
 </footer>     
       
