--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-lg-6">
         <ul id="imageGallery">
           <li>
-            <img src="img/fiber.jpg" alt"FiberOptic Cable">
+            <img class="toma" src="img/fiber.jpg" alt"FiberOptic Cable">
           </li>
           </ul>
         </div>
@@ -180,16 +180,14 @@
         <span class="icon-next"></span>
       </a>      
     </div> <!-- End Carousel -->
-<br>
-<br>
-<br>
+
 
 <nav id="social">
 <ul>
        <div class="follow">
-         <h2 class="RDS">Rainbow Design Services</h2>
-        <li><a href="https://www.facebook.com/groups/107214069331630/">Facebook</a></li>
-        <li><a href="https://www.linkedin.com/company/rainbow-design-services-inc.?trk=fc_badge">LinkeIn</a></li>
+         <h2 class="RDS">Rainbow Design Services, Inc.</h2>
+        <li class="FB"><a href="https://www.facebook.com/groups/107214069331630/">Facebook</a></li>
+        <li class="TW"><a href="https://www.linkedin.com/company/rainbow-design-services-inc.?trk=fc_badge">LinkeIn</a></li>
        </div>
      </ul>
 </nav>
