--- a/index.html
+++ b/index.html
@@ -185,14 +185,13 @@
 <nav id="social">
 <ul>
        <div class="follow">
-         <h2 class="RDS">Rainbow Design Services, Inc.</h2>
-        <li class="FB"><a href="https://www.facebook.com/groups/107214069331630/">Facebook</a></li>
-        <li class="TW"><a href="https://www.linkedin.com/company/rainbow-design-services-inc.?trk=fc_badge">LinkeIn</a></li>
+         <span class="RDS">Rainbow Design Services, Inc.</span>
+        <li class="FB"><a href="https://www.facebook.com/groups/107214069331630/"><img src="img/fb.png" alt="Facebook"></a></li>
+        <li class="TW"><a href="https://www.linkedin.com/company/rainbow-design-services-inc.?trk=fc_badge"><img src="img/li.png" alt="LinkeIn"></a></li>
        </div>
      </ul>
 </nav>
-<br>
-<br>
+
 <footer>
        <p class="copyRight">&copy; 2015 Rainbow Design Service, Inc. All rights reserved.</p>
 </footer>     
