--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="dropdown" aria-labelledby="dropdownMenuDivider">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
-                <li><a href="#">EZ MAP</a></li>
+                <li><a href="ezmap.html">EZ MAP</a></li>
                 <li><a href="#">EZ B.O.M.</a></li>
                 <li><a href="#">EZ Survey</a></li>
               </ul>
