--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="css/theme.css" rel="stylesheet">
   </head>
 
-  
+  <body>
 
     <!-- Fixed navbar -->
     <nav id="Navbar" class="navbar navbar-default navbar-fixed-top">
