added minor details

--- a/ezsurvey.html
+++ b/ezsurvey.html
@@ -115,44 +115,44 @@ Click on any image to see a larger version.</p>
              <ul class="bomimg">
           <li>
             <a href="img/survey/sur1.png" data-lightbox="BOM" data-title="Click the right half of the image to move forward.">
-            <img src="img/survey/sur1.png" alt="ACTIVITIES BY PROJECT">
-            <p>E.Z. B.O.M.</p>
+            <img src="img/survey/sur1.png" alt="Step1: enter the address">
+            <p>Step1: enter the address</p>
             </a>
           </li>
           <li>
             <a href="img/survey/sur2.png" data-lightbox="BOM" data-title="Click the right half of the image to move forward.">
-            <img src="img/survey/sur2.png" alt="CABLES BY PROJECT">
-            <p>E.Z. B.O.M.</p>
+            <img src="img/survey/sur2.png" alt="Step2: see the default results">
+            <p>Step2: see the default results</p>
             </a>
           </li>
           <li>
             <a href="img/survey/sur3.png" data-lightbox="BOM" data-title="Click the right half of the image to move forward.">
-            <img src="img/survey/sur3.png" alt="TAPS BY PROJECT">
-            <p>E.Z. B.O.M.</p>
+            <img src="img/survey/sur3.png" alt="Step3: ensure the point is rooftop">
+            <p>Step3: ensure the point is rooftop</p>
             </a>
           </li>
           <li>
             <a href="img/survey/sur4.png" data-lightbox="BOM" data-title="Click the right half of the image to move forward.">
-            <img src="img/survey/sur4.png" alt="POWER SUPPLIES">
-            <p>E.Z. B.O.M.</p>
+            <img src="img/survey/sur4.png" alt="Step 4: Results & Network Overlay">
+            <p>Step 4: Results & Network Overlay</p>
             </a>
           </li>
           <li>
             <a href="img/survey/sur5.png" data-lightbox="BOM" data-title="Click the right half of the image to move forward.">
-            <img src="img/survey/sur5.png" alt="NODES BY PROJECT">
-            <p>E.Z. B.O.M.</p>
+            <img src="img/survey/sur5.png" alt="Detail 1: Tools/Data">
+            <p>Detail 1: Tools/Data</p>
             </a>
           </li>
           <li>
             <a href="img/survey/sur6.png" data-lightbox="BOM" data-title="Click the left half of the image to move backward.">
-            <img src="img/survey/sur6.png" alt="CONTROL PANEL">
-            <p>E.Z. B.O.M.</p>
+            <img src="img/survey/sur6.png" alt="Detail 2: List of possible other Address Matches">
+            <p>Detail 2: List of possible other Address Matches</p>
             </a>
           </li>
           <li>
             <a href="img/survey/sur7.png" data-lightbox="BOM" data-title="Click the left half of the image to move backward.">
-            <img src="img/survey/sur7.png" alt="CONTROL PANEL">
-            <p>E.Z. B.O.M.</p>
+            <img src="img/survey/sur7.png" alt="Detail 3: A polygon drawn defining a possible Work Area">
+            <p>Detail 3: A polygon drawn defining a possible Work Area</p>
             </a>
           </li>
         </ul>
