--- a/ezbom.html
+++ b/ezbom.html
@@ -35,13 +35,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav nav-tabs nav-justified navbar-right" data-toggle="tab">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li class="dropdown" aria-labelledby="dropdownMenuDivider">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
-                <li><a href="#">EZ MAP</a></li>
-                <li><a href="#">EZ B.O.M.</a></li>
-                <li><a href="#">EZ Survey</a></li>
+                <li><a href="ezmap.html">EZ MAP</a></li>
+                <li><a href="ezbom.html">EZ B.O.M.</a></li>
+                <li><a href="ezsurvey">EZ Survey</a></li>
               </ul>
             </li>
             <li class="dropdown" aria-labelledby="dropdownMenuDivider">
@@ -76,6 +76,7 @@
 
 
 <div class="main-content container">
+  <div>
 	     <section class="row">
          <div class="col-lg-10">
            <div class="bom">
@@ -208,7 +209,7 @@
            </section>
            </div>
 
-
+</div>
 
 
 <nav id="social">
